--- a/10-Categorical-data-analysis.qmd
+++ b/10-Categorical-data-analysis.qmd
@@ -260,12 +260,12 @@ ggplot(data = data.frame(x = seq(0, 12, 1)), aes(x)) +
 
 ```
 
-在 @sec-Other-useful-distributions 我初次向讀者介紹卡方分佈，只有稍微講一下什麼是**自由度**，強調這是很重要的概念。請看一下 @fig-fig14-1 不同的卡方分佈，可知只要自由度改變了，那麼形狀劇烈改變。那麼**自由度**究竟是什麼呢？其實在解釋自由度與常態態分佈的關係時，就提到了一種解釋：自由度是可平方並可加成的*常態分佈變項數量*。當然，這樣的解釋相當抽象，對多數讀者沒有幫助。接著讓我們透過真實的資料，來嘗試理解自由度吧。
+讀者在 @sec-Other-useful-distributions 初次認識卡方分佈，只有稍微了解什麼是**自由度**，這裡要再次解釋這項重要概念。請看一下 @fig-fig14-1 不同的卡方分佈，可知只要自由度改變了，那麼形狀劇烈改變。那麼**自由度**究竟是什麼呢？其實在解釋自由度與常態態分佈的關係時，就提到了一種解釋：自由度是可平方並可加成的*常態分佈變項數量*。當然，這樣的解釋相當抽象，對多數讀者沒有幫助。接著讓我們透過真實的資料，來嘗試理解自由度吧。
 
 自由度的基本概念其實相當簡單，計算方法是將先算出資料的“總數”，然後減去“不可變動”的資料數目。[^10-categorical-data-analysis-5]這樣說有點籠統，所以這裡用想像實驗的撲克牌資料再解釋一下。首先有$O1, O2, O3, O4$四個分別代表選出一種花色（紅心，梅花，方塊，黑桃）觀察次數的數字。這四個數字是經過實驗得到的隨機結果，其實還有一個不可變動的樣本量 $N$。[^10-categorical-data-analysis-6]也就是說，如果我們知道有多少人選擇紅心，多少人選擇方塊，多少人選擇梅花，那麼就能確實知道還有多少人選擇黑桃。換句話說，雖然總體資料量是四個，實際上只有 $4 - 1 = 3$ 個自由度。另一種角度的思理解方式是，我們想要估算四種類別的機率，但是全部類別的機率加起來必須等於一，那麼其中一個類別的機率不可變動。因此自由度是 $4 - 1 = 3$。無論您想用觀察次數的角度，還是機率的角度理解自由度，答案都是一樣的。通常要執行 $k$ 組的卡方適合度檢定時，自由度都是 $k - 1$。
 
 
-[^10-categorical-data-analysis-5]: 我必須強調，這是一種過度簡化的解釋。雖然這種解釋適用多數情況，但是偶爾會遇到自由度並非整數的狀況。為了不要讓讀者過於困擾，遇到這樣的狀況時，只要告訴自己“自由度”其實是一種有點混亂的數學概念，初學的讀者通常只會知道簡單的解釋而非完整的解釋。以入門課程來說，簡單的解釋通常是最好的學習材料，但讀者需要知道總有一天這樣的解釋無法幫助你更進一步的學習，如果沒有先做好心理準備，有天看到了 $df = 3.4$ 或類似的狀況就會感到困惑，以為你在這裡學到的是錯誤的觀念，其實是有些複的細節先不做交待。
+[^10-categorical-data-analysis-5]: 我必須強調，這是一種過度簡化的解釋。雖然這種解釋適用多數情況，但是偶爾會遇到自由度並非整數的狀況。為了不要讓讀者過於困擾，遇到這樣的狀況時，只要告訴自己“自由度”其實是一種有點混亂的數學概念，初學的讀者通常只會知道簡單的解釋而非完整的解釋。以入門課程來說，簡單的解釋通常是最好的學習材料，但讀者需要知道總有一天這樣的解釋無法幫助你更進一步的學習，如果沒有先做好心理準備，有天看到了 $df = 3.4$ 或類似的狀況就會感到困惑，以為你在這裡學到的是錯誤的觀念，其實是先不交待有些複雜的細節。
 
 [^10-categorical-data-analysis-6]: 其實樣本量並不是永遠固定的數值。例如，實驗可能是在固定時段裡執行，參與人數取決於實際會有多少人參加。這些因素對於目前的學習目標並不重要。
 
@@ -336,7 +336,7 @@ knitr::include_graphics("images/fig10-3.png")
 
 ### jamovi實作
 
-毫不意外地，jamovi 提供了一個分析工具，可以幫你完成這些計算。讓我們使用 *Randomness.omv* 文件。在主要的“分析”工具欄中，選擇“頻率” - “單樣本比例檢驗” - “$N$ 個結果”。然後在出現的分析視窗中將要分析的變項（從選擇 1 開始）移到“變項”框中。此外，單擊“預期計數”復選框，以便將這些資料顯示在結果表中。完成所有這些操作後，你應該會在 jamovi 中看到分析結果，如 @fig-fig14-4。然後不出所料，jamovi 提供了與我們上面手動計算相同的預期計數和統計資料，$\chi^2$ 值為 $(8.44$，自由度為 $3$，$p=0.038$。注意，我們不再需要查找臨界 p 值閾值，因為 jamovi 給出了在 $3$ 自由度下計算得出的 $\chi^2$ 的實際 p 值。
+jamovi 的預設分析套件`Frequencies`提供完成以上計算的工具，以下使用 *Randomness.omv* 示範。首先從主選單“Analysis"列出的套件按鈕，點選“Frequencies” - “One Sample Proportion Tests”- “$N$ Outcomes”。在分析工具設定視窗選擇要分析的變項（`choice_1`），到Variable對話框。接著勾選"Expected counts"，完成報表設定，如同 @fig-fig14-4 的畫面右方報表呈現的分析結果。讀者可以看到報表呈現與前述的手動計算相同的預期計數和統計資料，$\chi^2 =  8.44$，自由度為 $3$，$p=0.038$。更重要的是，我們不需要查表找臨界值判斷 p 值，因為 jamovi 也輸出$\chi^2$的自由度是$3$所對應的 p 值。
 
 
 
@@ -345,64 +345,66 @@ knitr::include_graphics("images/fig10-3.png")
 ```{r}
 #| label: fig-fig14-4
 #| classes: .enlarge-image
-#| fig-cap: jamovi 中的 $\chi^2$ 單樣本比例檢驗，表格顯示觀察到的頻率和比例以及期望的頻率和比例
+#| fig-cap: jamovi 中的 $\chi^2$ 單樣本比例檢定(One Sample Proportion Tests)，報表表格顯示觀察到的頻率和比例(Observed)以及期望的頻率和比例(Expected)
 #A $\chi^2$ One Sample Proportion Test in jamovi, with table showing both observed and expected frequencies and proportions
 knitr::include_graphics("images/fig10-4.png")
 ```
 
 ### 另一種虛無假設
 
-
-此時，你可能會想知道如果你想進行適合度檢驗，但你的虛無假設不是所有類別的機率都相等該怎麼辦。例如，假設有人提出了這樣的理論預測，即人們應該以 $60\%$ 的機率選擇紅色牌，以 $40\%$ 的機率選擇黑色牌（我不知道為什麼你會這樣預測），但沒有其他偏好。如果是這樣，虛無假設將期望選擇愛心的比例為 $30\%$，選擇方塊的比例為 $30\%$，選擇黑桃的比例為 $20\%$，選擇梅花的比例為 $20\%$。換句話說，我們期望愛心和方塊的出現次數是黑桃和梅花的 1.5 倍（$30\%$ : $20\%$ 的比例與 1.5 : 1 相同）。對我來說，這似乎是一個愚蠢的理論，但是用我們的 jamovi 分析可以很容易地測試這個明確指定的虛無假設。在分析視窗中（標記為“比例檢驗（N個結果）”的 @fig-fig14-4 中，你可以展開“預期比例”的選項。當你這樣做時，將會出現一些選項，讓你為選定的變項輸入不同的比例值，在我們的案例中，這個變項是 choice 1。將比例更改為反映新的虛無假設，如 @fig-fig14-5 所示，並觀察結果如何變化。
+也許讀者會遇到適合度檢定要檢驗的虛無假設涵蓋的所有類別，並不是機率都相等，應該怎麼辦？例如，假設有套理論預測多數人選擇花色是紅色的撲克牌機率是$60\%$，選擇花色是黑色的撲克牌機率是$40\%$，所以設定虛無假設的期望比例是紅心為 $30\%$，方塊為 $30\%$，黑桃為 $20\%$，梅花為 $20\%$。也就是說，紅心和方塊的期望次數是黑桃和梅花的 1.5 倍（$30\%$ : $20\%$ 等同於 1.5 : 1 ）。儘管這套理論聽起來有些無厘頭，還是能用jamovi檢定這套虛無假設。從設定視窗左方( @fig-fig14-4 )，點選"Expected Proportion"就能展開Ratio(預期比率)的選項。如此就能在待輸入的空格中，為變項所設定的類別輸入不同的比例值。這個案例的變項是`choice_1`。jamovi能自動將比率轉換為虛無假設的比率數值，如同 @fig-fig14-5 。
 
 <!--- At this point you might be wondering what to do if you want to run a goodness-of-fit test but your null hypothesis is not that all categories are equally likely. For instance, let's suppose that someone had made the theoretical prediction that people should choose red cards $60\%$ of the time, and black cards $40\%$ of the time (I've no idea why you'd predict that), but had no other preferences. If that were the case, the null hypothesis would be to expect $30\%$ of the choices to be hearts, $30\%$ to be diamonds, $20\%$ to be spades and $20\%$ to be clubs. In other words we would expect hearts and diamonds to appear 1.5 times more often than spades and clubs (the ratio $30\%$ : $20\%$ is the same as 1.5 : 1). This seems like a silly theory to me, and it's pretty easy to test this explicitly specified null hypothesis with the data in our jamovi analysis. In the analysis window (labelled 'Proportion Test (N Outcomes)' in @fig-fig14-4 you can expand the options for 'Expected Proportions'. When you do this, there are options for entering different ratio values for the variable you have selected, in our case this is choice 1. Change the ratio to reflect the new null hypothesis, as in @fig-fig14-5, and see how the results change. --->
 
 ```{r}
 #| label: fig-fig14-5
-#| fig-cap: 在 jamovi 中更改 $\\chi^2$ 單樣本比例檢驗的預期比例
+#| fig-cap: 在單樣本比例檢定設定視窗，填寫 $\\chi^2$ 的預期比率。
 #Changing the expected proportions in the $\\chi^2$ One Sample Proportion Test in jamovi
 knitr::include_graphics("images/fig10-5.png")
 ```
 
-預期計數現在顯示在 @tbl-tab14-6 中。
+各類別的預期次數顯示於 @tbl-tab14-6 。
 
 <!--- The expected counts are now shown in @tbl-tab14-6. --->
 
 ```{r}
 #| label: tbl-tab14-6
-#| tbl-cap: 不同虛無假設的預期計數
+#| tbl-cap: 另一種虛無假設設定的各花色預期次數
 #Expected counts for a different null hypothesis
 huxtabs[[10]][[6]]
 ```
 
-$\chi^2$ 統計量為 4.74，自由度為 3，$p = 0.182$。現在，我們更新的假設和預期頻率與上次的結果有所不同。因此，我們的 $\chi^2$ 檢驗統計量和 p 值也有所不同。令人惱火的是，p 值為 $.182$，因此我們不能拒絕虛無假設（回顧 @sec-The-p-value-of-a-test 提醒自己為什麼）。可悲的是，儘管虛無假設對應著一個非常愚蠢的理論，這些資料並沒有提供足夠的證據來反駁它。
+重新計算的假設和預期次數與前一次的結果不一樣了，因此，我們的 $\chi^2$ 檢定統計數和 p 值也有所不同，$\chi^2$ 統計量為 4.74，自由度為 3，$p = 0.182$。更新的p值是最令人不高興的，這麼一來就不能拒絕虛無假設（請讀者回顧 @sec-The-p-value-of-a-test ）。最無奈的是，就算虛無假設代表一種沒什麼道理的理論，現在的資料並無法提供足夠的證據來反駁。
+
 
 <!--- and the $\chi^2$ statistic is 4.74, 3 d.f., $p = 0.182$. Now, the results of our updated hypotheses and the expected frequencies are different from what they were last time. As a consequence our $\chi^2$ test statistic is different, and our p-value is different too. Annoyingly, the p-value is $.182$, so we can't reject the null hypothesis (look back at @sec-The-p-value-of-a-test to remind yourself why). Sadly, despite the fact that the null hypothesis corresponds to a very silly theory, these data don't provide enough evidence against it. --->
 
 ### 適合度檢定的報告寫作 {#sec-How-to-report-the-results-of-a-test}
 
-現在你知道了這個測試的運作方式，也知道如何使用神奇的jamovi計算盒來進行測試。接下來你需要知道的是如何撰寫結果。畢竟，設計和執行實驗，然後分析資料，如果不告訴別人結果是沒有意義的！所以讓我們來談談在報告分析時需要做的事情。讓我們繼續以撲克牌花色為例。如果我想將這個結果寫成一篇論文之類的東西，那麼慣常的報告方式是這樣寫的：
+現在知道了適合度檢定的執行方法，也知道如何使用jamovi來完成。接下來讀者需要知道的是如何撰寫結果。畢竟，花心思設計和執行實驗，然後分析資料，如果不告訴別人結果是沒有意義的！所以接著來談談準備分析報告需要注意的事情。我們繼續以撲克牌花色的案例說明。如果想將這些結果寫成一篇論文，那麼符合慣例的報告如同下一段：
 
-> 在實驗的200名參與者中，有64人首選紅心，51人選擇方塊，50人選擇黑桃，35人選擇梅花。進行了卡方適合度檢驗以測試四種花色的選擇機率是否相同。結果顯著（$\chi^2(3) = 8.44, p< .05$），這表明人們在選擇花色時並非完全隨機。
+> 這項實驗200位參與者有64人首選紅心，51人選擇方塊，50人選擇黑桃，35人選擇梅花。以卡方適合度檢定，分析四種花色被選擇機率是否相同，顯著表明人們在選擇花色時並非完全隨機（$\chi^2(3) = 8.44, p< .05$）。
 
-這相當直接，希望它看起來很不起眼。儘管如此，你應該注意到這個描述中的幾點內容：
+執告敘述很直接，讀起來中規中矩。儘管如此，讀者應該留意報告中的幾個的重點：
 
-- *描述統計資料在統計檢驗之前*。也就是說，在進行檢驗之前，我告訴讀者有關資料的一些信息。通常，這是一個很好的做法。永遠記住，你的讀者對你的資料了解得遠不如你。因此，除非你妥善地向他們描述，否則統計檢驗對他們來說毫無意義，他們會感到沮喪和哭泣。
-- *描述告訴你正在測試的虛無假設是什麼*。老實說，作者並不總是這樣做，但在存在一定歧義的情況下，或者在你不能依賴你的讀者非常熟悉你正在使用的統計工具時，這通常是一個好主意。很多時候讀者可能不知道（或記不起）你正在使用的檢驗的所有細節，所以提醒他們是一種禮貌！對於適合度檢驗來說，你通常可以依賴科學觀眾了解它的運作方式（因為它涵蓋在大多數入門統計課程中）。然而，明確陳述虛無假設（簡要地！）仍然是一個好主意，因為虛無假設可能因你使用檢驗的目的而有所不同。例如，在撲克牌的例子中，我的虛無假設是四個花色的機率相同（即，$P1 = P2 = P3 = P4 = 0.25$），但這個假設並沒有什麼特別的。我可以同樣使用適合度檢驗測試虛無假設，即$P_1 = 0.7$和$P2 = P3 = P4 = 0.1$。所以，向讀者解釋你的虛無假設是有幫助的。另外，注意到我用文字而不是數學描述虛無假設。這是完全可以接受的。你可以用數學描述它，但是因為大多數讀者發現文字比符號更容易閱讀，所以大多數作者傾向於用文字描述虛無假設（如果可以的話）。
-- *包括"統計塊"*。在報告檢驗結果本身時，我不僅僅說結果顯著，還包括了一個“統計塊”（即括號內密集的數學部分），其中報告了所有“關鍵”統計信息。對於卡方適應度檢驗，報告的信息包括檢驗統計量（即適應度統計量為8.44）、用於檢驗的分布信息（具有3個自由度的$\chi^2$，通常縮寫為$\chi^2$(3)），然後是結果是否顯著（在本例中為$p< .05$）。每個檢驗所需的統計塊中的特定信息各不相同，因此每次我介紹一個新檢驗時，我都會向您展示統計塊應該是什麼樣子。[^10-categorical-data-analysis-7] 但是，一般原則是您應該始終提供足夠的信息，以便讀者在需要時可以自己檢查測試結果。
+- *描述統計要擺在統計檢定之前*。在呈現檢定之前，讀者需要知道目標資料的重要信息，這通常是一個很好的寫作方法。寫報告時一定要記得，讀者對於資料的了解遠不如寫作者。所以，除非向讀者妥善地描述，否則統計檢定對讀者來說毫無意義，只會覺得作者看不起人。
 
-- *對結果進行解釋*。除了指出結果顯著之外，我還提供了結果的解釋（即，人們沒有隨機選擇）。這對讀者也是一種友善，因為它告訴他們關於資料中發生了什麼事的一些信息。如果不包括這樣的東西，讀者很難理解發生了什麼事。[^10-categorical-data-analysis-8]
+- *告訴讀者這裡要測試的虛無假設*。老實說，多數作者並不會這樣做，但是當文字表達存在歧義，或者讀者不見得熟悉這裡使用的統計工具時，通常是一個好的寫作策略。很多時候讀者可能不知道或不記得報告使用的檢定方法細節，所以給一些提示是一種禮貌！以適合度檢定來說，寫作者通常可以假定受過科學教育的讀者大都了解執行細節（因為大多數入門統計課程都會介紹）。然而，簡要且明確地陳述虛無假設仍然是一個好策略，因為虛無假設可能因為檢驗目的而有所不同。就像撲克牌範例的第一種虛無假設是四個花色的機率相同（即，$P1 = P2 = P3 = P4 = 0.25$），但是這個假設並沒有什麼特別的。另一方面，我們也可以使用適合度檢定分析另一種虛無假設：$P_1 = 0.7$和$P2 = P3 = P4 = 0.1$。所以，向讀者解釋虛無假設還是有幫助的。另外，注意以上報告示範是用文字而不是數學符號描述虛無假設，這是完全可以接受的。當然也可以用數學符號描述，但是考慮大多數讀者閱讀文字比符號更容易，所以大多數作者傾向儘可能用文字描述虛無假設。
 
-[^10-categorical-data-analysis-7]: 嗯，有點。如何報告統計資料的慣例在不同的學科之間有所不同。我傾向於堅持心理學的做法，因為這就是我的工作。但是，我認為向讀者提供足夠的信息，以便他們可以檢查你的結果的一般原則是相當普遍的。
+- *構築"統計區塊"*。在報告檢定結果的那句話裡，不僅僅說結果顯著，還加入了用括號集合數學符號的“統計區塊”，其中包括所有“關鍵”統計訊息。卡方適合度檢定要報告的訊息包括檢定統計量（8.44）、用於檢定的分布信息（具有3個自由度的$\chi^2$分佈，通常簡寫為$\chi^2$(3)），以及結果是否顯著的標記（$p< .05$）。每個檢定報告的統計區塊要呈現的特定訊息各不相同，因此後續介紹一個檢定方法時，都會向讀者展示統計區塊應該如何組織。[^10-categorical-data-analysis-7] 不過，一般原則是寫作者應該提供足夠的訊息，讓讀者在有必要時檢核檢定結果。
 
-[^10-categorical-data-analysis-8]: 對有些人來說，這個建議可能聽起來有點奇怪，或者至少與編寫技術報告的“通常”建議相衝突。通常，學生們被告知報告的“結果”部分是用來描述資料並報告統計分析，而“討論”部分是提供解釋的。這在某種程度上是對的，但我認為人們經常過於照字面解釋它。我通常的做法是在結果部分提供對資料的快速而簡單的解釋，以便我的讀者理解資料告訴我們什麼。然後，在討論中，我嘗試講述一個關於我的結果如何與其他科學文獻相適應的更大的故事。簡而言之，不要讓“解釋屬於討論”這個建議使你的結果部分變得難以理解。讓讀者明白你的意思更重要。
+- *解釋分析結果*。除了指出結果有沒有顯著之外，示範還提供結果的解釋。這對也是一種友善讀者的寫作方式，告訴他們從資料中發現了什麼事情。如果沒有這樣的部分，讀者很難理解有什麼發現。[^10-categorical-data-analysis-8]
 
-正如其他所有事物一樣，你應該首要關注的是向讀者解釋事物。永遠記住，報告結果的目的是與另一個人溝通。我無法告訴您我看過多少次報告、論文甚至科學文章的結果部分就是胡言亂語，因為作者只關注確保包含所有數字，卻忘記了與人類讀者真正交流。
+[^10-categorical-data-analysis-7]: 如何報告統計結果的慣例因學科性質而異。因為這本書以心理學系學生為主要讀者，會採用心理學的寫作慣例。但是，向讀者提供足夠的訊息，讓他們可以檢核結果，是普遍的的一般原則。
 
-> *撒旦在統計和引用經文中同樣感到高興*[^10-categorical-data-analysis-9]
+[^10-categorical-data-analysis-8]: 對某些人來說，這個建議可能聽起來有點奇怪，或者至少與編寫技術報告的常見建議互相衝突。許多學生們通常會被告知報告的“結果”部分，是用來描述資料並報告統計分析，“討論”部分才是提供解釋。在某種程度上這樣的建議並沒有錯，但是教學者經常會只照字面的意思教授。原作者的通常做法是在結果部分提供快速且簡單的解釋，以便讀者理解這份資料告訴我們什麼。然後，在討論部分再從更大的視野，講述這次研究的結果，如何調整現存科學文獻所構築的知識體系。簡單來說，不要讓“解釋屬於討論”這個建議，增加結果部分的閱讀難度，更重要是讓讀者明白作者要表達的意思。
+
+如同各式各樣出版品，寫作者應該關注的是為讀者解釋事物。寫作的第一目的是與另一個人溝通，同樣是撰寫結果報告的目的。身為教師的人通常會看過無數份報告、論文甚至科學文章的結果部分都是胡言亂語，因為作者只關注呈現數字，卻忘記與人類讀者的交流責任。
+
+> *統計數字和宗教經文都有隱藏撒旦的微笑*[^10-categorical-data-analysis-9]
 > -- H.G. 威爾斯
 
-[^10-categorical-data-analysis-9]: 如果你一直在仔細閱讀，並且像我一樣是一個數學苛刻的人，那麼上一節中我寫卡方檢驗的方式可能會讓你有點困擾。你可能會想，用 "$\chi^2(3) = 8.44$" 這樣寫感覺有點不對勁。畢竟，是適合度統計數等於8.44，所以我不應該寫 $X^2 = 8.44$ 或者 $GOF = 8.44$ 嗎？這似乎混淆了抽樣分布（即$\chi^2$與df=3）與檢驗統計量（即$X^2$）。可能性是你認為這是錯字，因為$\chi$和X看起來非常相似。奇怪的是，這並非如此。寫 $\chi^2$(3)= 8.44 本質上是一種高度縮略的寫法，表示“檢驗統計量的抽樣分布為$\chi^2$(3)，檢驗統計量的值為8.44”。從某種意義上說，這有點愚蠢。有很多不同的檢驗統計量最終具有卡方抽樣分布。我們用於適合度檢驗的$X^2$統計量只是眾多統計量中的一種（儘管是最常見的一種）。在一個明智、完全組織的世界裡，我們總是為檢驗統計量和抽樣分布分配一個單獨的名字。這樣，統計塊本身就可以告訴你研究者究竟計算了什麼。有時這確實是可能的。例如，Pearson適合度檢驗中使用的檢驗統計量寫作$X^2$，但還有一種與G-test$^a$ [@Sokal1994]關係密切的檢驗稱為G-test，其中檢驗統計量寫作$G$。事實上，Pearson適合度檢驗和G-test都檢驗相同的虛無假設，抽樣分布完全相同（即，具有$k-1$自由度的卡方分布）。如果我對卡片資料進行G-test而不是適合度檢驗，那麼我最終會得到一個檢驗統計量$G = 8.65$，它略有不同於我之前得到的$X^2 = 8.44$值，並產生稍微小一點的p值$p = .034$。假設約定俗成地報告檢驗統計量，然後是抽樣分布，然後是p值。如果是這樣的話，這兩種情況將產生不同的統計塊：我原來的結果將寫成$X^2 = 8.44$，$\chi^2(3)$，$p = .038$，而使用G-test的新版本將寫成$G = 8.65$，$\chi^2(3)$，$p = .034$。然而，使用縮略報告標準，原始結果寫作$\chi^2(3) = 8.44, p =.038$，新結果寫作$\chi^2(3) = 8.65, p = .034$，所以實際上不清楚我實際上運行了哪個檢驗。那麼為什麼我們不生活在一個統計塊的內容能唯一確定哪些檢驗被執行的世界呢？根本原因是生活是混亂的。我們（作為統計工具的用戶）希望它整齊、有序並且有組織。我們希望它像產品一樣被設計，但這不是生活的運作方式。統計是一門與其他任何學科一樣的智力學科，因此它是一個大規模的分布式、部分協作和部分競爭的項目，沒有人真正完全了解它。你和我作為資料分析工具的東西並非由統計之神的行為創造的。它們是由很多不同的人發明的，作為學術期刊中的論文發表，由很多其他人實施、糾正和修改，然後由其他人在教科書中向學生解釋。因此，有很多檢驗統計量甚至沒有名字，因此它們只是被賦予與相應抽樣分布相同的名字。稍後我們將看到，任何遵循$\chi^2$分布的檢驗統計量通常被稱為“卡方統計量”，遵循$t$分布的任何統計量被稱為“t統計量”，等等。但是，正如$\chi^2$與$G$的例子所說明的，具有相同抽樣分布的兩個不同事物仍然是不同的。因此，有時候明確表明你實際上運行的檢驗是很好的主意，特別是如果你在做一些不尋常的事情。如果你只說“卡方檢驗”，實際上並不清楚你在談論哪種檢驗。儘管如此，由於兩個最常見的卡方檢驗是適合度檢驗和獨立性檢驗，大多數具有統計培訓的讀者可能都能猜到。儘管如此，這仍然是需要注意的事情。—$^a$ 讓事情變得複雜的是，G-test是一整類被稱為似然比檢驗的檢驗的特例。我在這本書中沒有介紹LRT，但它們確實是值得了解的好東西。
+[^10-categorical-data-analysis-9]: 如果讀者讀得很仔細，也是對數學表達要求嚴格的人，那麼這一節卡方檢定結果的寫作可能會讓你們有點困擾。讀者可能會覺得 "$\chi^2(3) = 8.44$"這樣的寫法似乎有點不對勁。畢竟是說適合度檢定統計數等於8.44，所以是不是應該寫成 $\chi^2 = 8.44$ 或者 $GOF = 8.44$ 比較好？有的讀者可能認為這會讓人認為是錯字，因為$\chi$和X長得非常像，有人會混淆表示取樣分佈（$\chi^2$與df=3）與檢定統計量（$\chi^2$）的符號。奇怪的是，多數專業讀者不這應認為。$\chi^2$(3)= 8.44 其實是一種極度縮略的寫法，意思是“檢定統計數的取樣分佈為$\chi^2$(3)，檢定統計數的值為8.44”。從某種意義來看，這種寫法有點愚蠢，許多統計檢定的統計值都會適配卡方取樣分佈。儘管適合度檢定很常見，最後得到的$\chi^2$統計數只是眾多統計數的一種。在一個講究規則，依賴組織運作的世界，總會有為檢驗統計定和取樣分佈各取一個專有名詞的呼聲。有了專有名詞，報告裡的統計區塊就可以告訴讀者究竟算了什麼。雖然有部分統計數是可行的，像是Pearson適合度檢定使用的檢定統計值寫作$\chi^2$，但是有一種與G-test$^a$ [@Sokal1994]關係密切的檢定稱為G-test，其中檢定統計數寫作$G$。事實上，Pearson適合度檢定和G-test都能檢定相同的虛無假設，取樣分佈也是自由為$k-1$的卡方分佈。如果我對撲克牌資料進行G-test而不是適合度檢定，得到一個檢定統計數就是$G = 8.65$，比起之前算出的$\chi^2 = 8.44$稍微大一點，並且p值稍微小一點$p = .034$。假設報告慣例是先寫檢定統計數，然後是取樣分佈，然後是p值。如此一來兩種檢定會寫成完全不同的統計區塊：卡方檢定的結果是$\chi^2 = 8.44$，$\chi^2(3)$，$p = .038$，而G-test的版本是$G = 8.65$，$\chi^2(3)$，$p = .034$。然而，根據縮略報告標準，卡方檢定的結果寫作$\chi^2(3) = 8.44, p =.038$，G-test的結果寫作$\chi^2(3) = 8.65, p = .034$，所以會搞不清楚研究者是執行了那種檢定方法。<br>那麼為何無法讓統計區塊清楚表示是執行那種檢定方法嗎？根本原因是宇宙的本質就是混沌。身為統計工具的我們當然希望有整齊有序的寫作規範，讓統計報告像工廠產品一樣被設計，但這不是宇宙的運作方式。統計是一門與其他學科一樣集合眾人智慧的領域，持續由許多學者以分散、協作又競爭的模式更新知識，所以沒有人能真正完全掌握統計的寫作規則。你我正在用的資料分析工具並不是來自一位統計之神的創造，而是很多學者的發明累積作。要經過發表在學術期刊，經過其他學者實做、糾正和修改，然後其他學者寫到教科書，才能向學生解釋。因此，有很多檢定統計數甚至沒有名字，只是被賦予與對應的取樣分佈相同的名字。稍後將看到許多這類例子，任何遵循$\chi^2$分布的檢定統計數，通常被稱為“卡方統計數”，遵循$t$分布的任何統計量被稱為“t統計數”。但是，如同$\chi^2$與$G$，即使統計數來自相同的取樣分佈，兩者仍然是不一樣的東西。所以有時候寫清楚實際執行的檢定方法是很好的主意，特別是使用一些不常見的統計方法。如果報告只寫“卡方檢定”，讀者會不清楚這是在談那種檢定。儘管如此，由於最常見的兩種卡方檢定是適合度檢定和獨立性檢定，大多數有學過統計的讀者可能都會猜到。儘管如此，這仍然是需要注意的事情。—$^a$ 讓統計報告寫作變得複雜的是，G-test是一種被稱為似然比檢定特別方法。由於這本書中沒有介紹LRT，無法深入介紹，但這是值得讀者好好了解的統計方法。
 
 <!--- So now you know how the test works, and you know how to do the test using a wonderful jamovi flavoured magic computing box. The next thing you need to know is how to write up the results. After all, there's no point in designing and running an experiment and then analysing the data if you don't tell anyone about it! So let's now talk about what you need to do when reporting your analysis. Let's stick with our card-suits example. If I wanted to write this result up for a paper or something, then the conventional way to report this would be to write something like this:
 
@@ -509,7 +511,7 @@ $$\hat{P}_{i}= \frac{R_i}{N}$$
 
 [^10-categorical-data-analysis-11]: 就嚴格的統計操作來說，$E_{ij}$ 是估計值，所以應該寫成 $\hat{E_{ij}}$。但很少有統計教科書這樣寫，這裡也採用相同的寫法。 $$\hat{E}_{ij}= \frac{R_i \times C_j}{N}$$
 
-<!--- 現在我們已經了解了如何從虛無假設中計算期望頻率，接下來的步驟與適合度檢驗相似。首先，對於每個 $O_{ij}$ 和 $E_{ij}$，我們計算 $(O_{ij} - E_{ij})^2 / E_{ij}$ 的值。然後，我們將這些值相加，得到一個名為卡方的統計量（$\chi^2$）。這個統計量也遵循卡方分布，因此我們可以將其用於計算 p 值，並進行檢驗。實際上，與適合度檢驗相似，卡方獨立性檢驗的自由度是由資料中的類別數量決定的，而不是預先知道的。
+<!--- 現在我們已經了解了如何從虛無假設中計算期望頻率，接下來的步驟與適合度檢定相似。首先，對於每個 $O_{ij}$ 和 $E_{ij}$，我們計算 $(O_{ij} - E_{ij})^2 / E_{ij}$ 的值。然後，我們將這些值相加，得到一個名為卡方的統計量（$\chi^2$）。這個統計量也遵循卡方分布，因此我們可以將其用於計算 p 值，並進行檢驗。實際上，與適合度檢定相似，卡方獨立性檢驗的自由度是由資料中的類別數量決定的，而不是預先知道的。
 
 總之，我們可以通過將卡方獨立性檢驗應用於類別資料來檢驗虛無假設，即人類和機器人對問題的回答方式相同。這種方法允許我們計算期望頻率、卡方統計量以及對應的 p 值，從而幫助我們判斷是否拒絕虛無假設。--->
 
@@ -600,9 +602,9 @@ $$ Amazing.
 
 --->
 
-### 獨立性檢定實作  {#sec-doing-independence-test}
+= ### 獨立性檢定實作  {#sec-doing-independence-test}
 
-好吧，既然我們知道了檢驗是如何進行的，讓我們看看如何在 jamovi 中完成它。雖然讓您長時間地經歷繁瑣的計算以便被迫學習可能很有吸引力，但我認為這是沒有意義的。在上一節中，我已經向您展示了如何針對適合度檢驗進行長時間的操作，而且由於獨立性檢驗在概念上沒有任何不同，所以您不會通過長時間的操作學到任何新的東西。因此，我將直接向您展示簡單的方法。在 jamovi 中運行檢驗（“頻率” - “列聯表” - “獨立樣本”）之後，您只需查看 jamovi 結果窗口中列聯表下方，那裡就是 $\chi^2$ 統計量。這顯示了一個 $\chi^2$ 統計值為 10.72，2 d.f.，p-value = 0.005。
+好吧，既然我們知道了檢驗是如何進行的，讓我們看看如何在 jamovi 中完成它。雖然讓您長時間地經歷繁瑣的計算以便被迫學習可能很有吸引力，但我認為這是沒有意義的。在上一節中，我已經向您展示了如何針對適合度檢定進行長時間的操作，而且由於獨立性檢驗在概念上沒有任何不同，所以您不會通過長時間的操作學到任何新的東西。因此，我將直接向您展示簡單的方法。在 jamovi 中運行檢驗（“頻率” - “列聯表” - “獨立樣本”）之後，您只需查看 jamovi 結果窗口中列聯表下方，那裡就是 $\chi^2$ 統計量。這顯示了一個 $\chi^2$ 統計值為 10.72，2 d.f.，p-value = 0.005。
 
 那很簡單，不是嗎？您還可以要求 jamovi 顯示預期計數 - 只需單擊“Cells”選項中的“Counts” - “Expected”複選框，預期計數將出現在列聯表中。同時，在此操作中，效果大小度量會有所幫助。我們將選擇 Cramér's $V$，您可以在“Statistics”選項中的複選框中指定它，它會給出 Cramér's $V$ 的值為 $0.24$。參見 @fig-fig14-6。我們稍後會再談論這個問題。
 
